* Feb 8 2001 hship

Remove code related to response writer compression (which has been removed from
IResponseWriter).
Configure Vlib to use the asset externalizer.

* Feb 6 2001 hship

Slight changes to Makefiles (due to variable name changes in JBE).

* Jan 30 2001 hship

Slight revision of VlibBeans Makefile (TAR variable was renamed to GNUTAR).

* Jan 26 2001 hship

Change the Publisher.script to make use of the new <let> tag.

* Jan 26 2001 hship

Update some Makefiles.

* Jan 25 2001 hship

Fix some bugs related to the Logout page and invalidting the HttpSession.

* Jan 24 2001 hship

Set JVM memory options when running jBoss for VlibBeans.

* Jan 23 2001 hship

Optimize VlibBeans for performance testing.
Remove the Inspector button from the Vlib border by default (it must be enabled).
Hide the "[Borrow]" button on the ViewBook page intead of disabling it.

* Jan 18 2001 hship

Update portions of the JSP Vlib to match the Tapestry Vlib.

* Jan 16 2001 hship

Make use of new ICallback classes with Vlib.
Update examples for changes to IDirectListener interface.

* Jan 10 2001 hship

VlibBeans: Install gnu-regexp.jar and log4j.jar as well as Tapestry.jar.
Vlib: Change NewBook and EditBook pages to use some magic scripting to enable/disable
the inputPropertyName field based on the selection in the publisher select.

* Jan 10 2001 hship

Fix the configure-jboss rule to depend on setup-jbe-util (not -utils).

* Jan 9 2001 hship

Minor changes related to the "package reorg madness" in the framework.

* Jan 9 2001 hship

Change copyrights for 2001.
Create a ShowMessage component.
Add log4j.jar to the classpath.

* Jan 4 2001 hship

Modify the tutorial to use the installed copy of the Tutorial.war, to test
the fix for [127536] Class load error for .wars.

* Jan 3 2001 hship

Update the tutorial to demonstrate localization of context and private assets.

* Jan 2 2001 hship

Add a tutorial to demonstration dynamically changing the locale.

* Jan 2 2001 hship
